# my_math

Chess/: Chess.sln
Chess/Chess/: Chess.vcxproj  Chess.vcxproj.filters  gui.h  main.cpp
Chess/Chess/x64/Debug/: Chess.exe.recipe  vc143.idb
Chess/Chess/x64/Debug/Chess.tlog/: Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  Source.cpp
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/: CMakeLists.txt  CMakeSettings.json
chess/src/: chess.cpp  chess.h
helloworld/: helloworld.cpp  helloworld.ilk
my_math/: CMakeLists.txt
my_math/my_math/: CMakeLists.txt
my_math/my_math/sourses/: OLDmatrix.cpp  bigint.cpp  bigint.h  complex.h  headers.h  main.cpp  main.ilk  matrix.h  numerical_methods.h  polynomial.h
my_math/sourses/: bigint.cpp  main.cpp  matrix.h  polynomial.h
tasks/: 1.cpp  1.ilk  2.cpp  2.ilk  3.cpp  methods.cpp  methods.ilk
tst/: tst.sln
tst/tst/: Source.cpp  tst.vcxproj
tst/tst/x64/Debug/: tst.exe.recipe  tst.ilk  vc143.idb
tst/tst/x64/Debug/tst.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tst.lastbuildstate
